DTGB-509: Fixed safari iphone issue by adding overflow-scrolling touch.

--- a/components/31-molecules/fields/checkbox-with-filter/_checkbox-with-filter.scss
+++ b/components/31-molecules/fields/checkbox-with-filter/_checkbox-with-filter.scss
@@ -57,6 +57,7 @@
     .checkbox-filter__content {
       flex: 1;
       overflow-y: scroll;
+      -webkit-overflow-scrolling: touch;
     }
 
     .checkbox-filter__filter {
